--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,7 @@
-<h1> Hello, world! </h1>
+<h1> Welcome to the World of Kehlani!!</h1>
+
+
+<h2>{{ song }}</h2>
+<h1><img src= {{ pic }}  /></h1>
+<h3>{{ artist }}</h3>
+<h4>Kehlani News:  {{ kehlani_tweets }}</h4>
